# discord_variety_bot

./: Cargo.toml  README.md
src/: main.rs  rps.rs
src/commands/: mod.rs  util.rs
src/commands/games/: rps.rs
