[package]
name = "discord_variety_bot"
version = "0.1.0"
authors = ["peoplepotatoes, peoplepotatoes@protonmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["framework", "standard_framework", "client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
#confy = "0.4.0"
#serde = "1.0.126"
